<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF3F8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.view.HomeActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_home">

    <TextView
        android:id="@+id/edt_source_iata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_shadow"
        android:drawableRight="@drawable/ic_marker"
        android:elevation="2dp"
        android:hint="@string/source_iata"
        android:imeOptions="actionNext"
        android:padding="15dp"
        android:textSize="16sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edt_destination_iata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_shadow"
        android:drawableRight="@drawable/ic_marker"
        android:elevation="2dp"
        android:hint="@string/destination_iata"
        android:imeOptions="actionNext"
        android:padding="15dp"
        android:textSize="16sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_source_iata" />

    <LinearLayout
        android:id="@+id/pnl_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_destination_iata">

        <TextView
            android:id="@+id/edt_date_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_shadow"
            android:drawableRight="@drawable/ic_date"
            android:elevation="2dp"
            android:hint="@string/date_from"
            android:padding="15dp"
            android:textSize="16sp"
            android:translationZ="2dp" />

        <TextView
            android:id="@+id/edt_date_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_shadow"
            android:drawableRight="@drawable/ic_date"
            android:elevation="2dp"
            android:hint="@string/date_to"
            android:padding="15dp"
            android:textSize="16sp"
            android:translationZ="2dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_adults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_shadow"
        android:drawableRight="@drawable/ic_people"
        android:elevation="2dp"
        android:hint="@string/quantity_passenger"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:padding="15dp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pnl_calendar" />

    <Button
        android:id="@+id/btn_find_tickets"
        style="@style/StyleButtonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_adults" />

    <LinearLayout
        android:id="@+id/pnl_loading_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible"
        android:gravity="center"
        android:background="@color/colorOpacity50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/message_find_tickets"
            android:textColor="@color/color1ABC9C"
            android:textSize="16sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>